@@ -33,7 +33,7 @@ extern "C" {
 extern char *
 stpcpy(char *dest, const char *src)
 {
-     while ( (*dest++ = *src++) != '\0' )
+     while ( *dest++ = *src++ )
           ;
      return dest-1;
 }
